# StudStuff

./: .gitignore  CMakeLists.txt  README.md
include/: Shared_ptr.h  control_block.h  shared_ptr.h  smart_shared_ptr.h
m1-net-log-filtering-system/: CMakeLists.txt
m1-net-log-filtering-system/tests/: CMakeLists.txt
m1-shared-ptr/: .gitignore  CMakeLists.txt  buildAndRun.sh
m1-shared-ptr/tests/: CMakeLists.txt  smart_shared_ptr_test.cc
m2-1-unit-tests/: CMakeLists.txt
m2-1-unit-tests/.github/workflows/: ci-cd.yml
m2-1-unit-tests/include/: Calculator.h
m2-1-unit-tests/src/: Calculator.cpp
m2-1-unit-tests/tests/: test_calculator.cpp
m3-algorithms-and-data-structures/: .gitignore  CMakeLists.txt  README.md
m3-algorithms-and-data-structures/1-containers-common/: CMakeLists.txt  student_list.cc  student_list.h  student_list_tests.cc
m3-algorithms-and-data-structures/2-algorithms-common/: CMakeLists.txt  algos.cc
m3-algorithms-and-data-structures/3-red-black-tree-impl/: CMakeLists.txt  red_black_tree.h  red_black_tree_test.cc
m3-algorithms-and-data-structures/4-hash-table-chaining/: CMakeLists.txt  hash_table.h  hash_table_main.cc
m3-algorithms-and-data-structures/5-perf/: CMakeLists.txt  bench_compare.cc  bench_complex.cc  rand_helper.h
m5-mt-async/: .gitignore  CMakeLists.txt  README.md  main.cc  test.cc  thread_pool.cc  thread_pool.h
m5-mt-async/include/: function_wrapper.h  join_threads.h  parallel_accumulate.h  thread_pool.h  thread_pool2.h  threadsafe_queue.h  work_stealing_queue.h
m6-network/: CMakeLists.txt  Dockerfile.receiver  Dockerfile.sender  README.md  docker-compose.yml
m6-network/include/common/: helpers.h  log_message.h
m6-network/include/receiver/: console_message_handler.h  grpc_receiver_service.h  message_handler.h
m6-network/include/sender/: grpc_message_sender.h  helpers.h  message_sender.h
m6-network/libs/ipv4filter/: CMakeLists.txt
m6-network/proto/: CMakeLists.txt  data_transfer.proto
m6-network/services/receiver/: CMakeLists.txt  receiver_server.cc
m6-network/services/sender/: CMakeLists.txt  grpc_sender.cc  grpc_sender.h  log_message.h  message_sender.h  sender_client.cc
m6-network/services/sender/gRPC/: grpc_sender.cc  grpc_sender.h
m6-network/src/common/: CMakeLists.txt  helpers.cc
m6-network/src/receiver/: CMakeLists.txt  console_message_handler.cc  grpc_receiver_service.cc  receiver_server.cc
m6-network/src/sender/: CMakeLists.txt  grpc_message_sender.cc  helpers.cc  sender_client.cc
m6-network/tests/: CMakeLists.txt  grpc_message_sender_test.cc
m7-dbms/: .env  .gitignore  Makefile  README.md  docker-compose.yaml
m7-dbms/cpp-app/: .clangd  .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile.cpp-app  vcpkg.json
m7-dbms/cpp-app/.devcontainer/: Dockerfile.dev  devcontainer.json
m7-dbms/cpp-app/src/: main.cc
m7-dbms/cpp-app/src/adapters/repositories/: ICommentRepository.h  IPostRepository.h  ITagRepository.h  IUnitOfWork.h  IUserRepository.h
m7-dbms/cpp-app/src/core/entities/: Comment.h  Post.h  Tag.h  User.h  UserTagsResult.h
m7-dbms/cpp-app/src/core/use_cases/: CreateUserWithPost.cc  CreateUserWithPost.h  GetUserTagsFromComments.cc  GetUserTagsFromComments.h
m7-dbms/cpp-app/src/infrastructure/db/: PostgresCommentRepo.cc  PostgresCommentRepo.h  PostgresPostRepo.cc  PostgresPostRepo.h  PostgresTagRepo.cc  PostgresTagRepo.h  PostgresUnitOfWork.cc  PostgresUnitOfWork.h  PostgresUserRepo.cc  PostgresUserRepo.h
m7-dbms/datagen/: Dockerfile.data-gen  requirements.txt
m7-dbms/datagen/src/: generate_data.py
m7-dbms/scripts/: import.sql  quiz.sql
m7-dbms/sql/: schema.sql
src/: Calculator.cpp
tests/: CMakeLists.txt  shared_ptr_test.cc  smart_shared_ptr_test.cc  test_shared_ptr.cpp
